# advent_of_code_2022

./: README.md  pyproject.toml
.github/workflows/: test.yml
advent_of_code/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py
