[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["chorhatarahuduketuri <chorhatarahuduketuri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = [".", 'advent_of_code']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
